force-app/main/default/objects/Quickbooks_Call_Log__c/Quickbooks_Call_Log__c.object-meta.xml
<CustomObject>
    <label>Quickbooks Call Log</label>
    <nameField>
        <displayFormat>Log-{0000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quickbooks Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>