force-app/main/default/objects/Quickbooks_Call_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <length>16</length>
    <type>Text</type>
</CustomField>