force-app/main/default/objects/Quickbooks_Call_Log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <label>Request_Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>