force-app/main/default/objects/Quickbooks_Call_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Direction__c</columns>
    <columns>URL__c</columns>
    <columns>Method__c</columns>
    <columns>Success__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>